# DesignPatterns

./: 1.txt  2.txt  3.1.1--3.1.3-C++11 语言新特性1.cpp  3.1.3--explicit修饰.cpp  3.1.4--Range-Based for 循环.cpp  3.1.5--C++ 禁用复制构造函数和赋值运算符.cpp  3.1.5--Move和Rvalue Reference理解.cpp  C++11 emplace.cpp  C++11新特性 P2 2 Variadic Templates.cpp  C++11智能指针（unique_ptr、shared_ptr、weak_ptr).cpp  CMakeLists.txt  Exported-2023-02-21.vssettings  READ.TXT  TickerQueue.cpp  TickerQueue.h  algorithm库用法.cpp  clone.bat  cmd_qt搭建安卓编译环境.cmd  cmd_编译curl.cmd  cmd_编译openssl.cmd  cmd_设置github ssh 权限.cmd  commit.bat  explicit修饰.cpp  go.txt  lambda c++.cpp  leecode  libssh2_create.txt  log2.json  main.go  matrix_trans.cpp  my.cpp  protobuf_c++.cpp  read.md  split.cpp  std::thread 与  std::async.cpp  testfsb.txt  thread_1.1_2.4.cpp  不定参数模板类.cpp  内存池1.cpp  初始化列表和构造函数体内赋值比较.cpp  (+7 more)
Abstract_Factory/: AbstractFactory.h  AbstractProduct.h  ConcreteFactory.h  ConcreteProduct.h  main.cpp
ArraySorting/: BubbleSort.h  Context.h  InsertionSort.h  SelectionSort.h  baseMethod.h  main.cpp
EssentialCPP/: file.h  main.cpp
Factory_Method/: ConcreteCreator.h  ConcreteProduct.h  Creator.h  Product.h  main.cpp
Factory_and_Strategy/: main.cpp
LeetCode/: cbign.cpp  cbign.h  read.cmd  二叉树_创建_判断二叉搜索树.cpp  大数运算.cpp  马走日.cpp  马走日_一次性走完算法  马走日m_n.cpp
Qt/: CDataManagement.h  CdataManagement.cpp  Qt乱码问题.txt  test.txt  tqt.cpp  tqt.h
Style/: Default.xml  Exported-2023-02-21.rar  Exported-2023-02-21.vssettings  Exported-2024-09-15字体颜色2022.vssettings  Exported-2024-09-15所有设置2022.vssettings  Exported-2025-02-28.vssettings
pro/: MRAR.TXT  form.cpp  form.h
web/: abc.asp  btc.asp
